syntax = "proto3";

package maelstrom.v1;

option go_package = "github.com/cmwaters/maelstrom";

message Account {
    uint64 balance = 1;
    bytes pub_key = 2;
}

message Batch {
    repeated uint64 tx_ids = 1;
}

message Tx {
    string signer = 1;
    uint64 fee = 2;
    bytes tx_hash = 3;
}